[refactor] NearbyPlaceSearchCondition dto 생성책임을 dto로 넘김